# ARAP_deformation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  polyscope_example.cpp
include/: arap_precompute.h  arap_single_iteration.h  biharmonic_precompute.h  biharmonic_solve.h
src/: arap_precompute.cpp  arap_single_iteration.cpp  biharmonic_precompute.cpp  biharmonic_solve.cpp
